[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuckooget"
version = "0.1.0"
description = "A very fast website mirror script."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "taro", email = "taro@eyes4you.org"},
]
license = {text = "BSD-3-Clause"}

dependencies = [
  "aiohttp",
  "aiofiles",
  "beautifulsoup4",
  "xxhash",
  "ujson",
  "maturin"
]

[project.scripts]
ck = "cuckooget.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["cuckooget"]

