[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "cuckooget"
version = "0.1.0"
description = "A very fast website mirror script."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "taro", email = "taro@eyes4you.org"},
]
license = "BSD-3-Clause"

dependencies = [
  "aiohttp",
  "aiofiles",
  "beautifulsoup4",
  "xxhash",
  "ujson"
]

[project.urls]
Source = "https://github.com/haturatu/cuckooget"

[project.scripts]
ck = "cuckooget.main:main"

[tool.maturin]
manifest-path = "lib/Cargo.toml"
python-source = "src"
module-name = "cuckooget.cuckoo_nest"
